--- a/app/src/main/res/layout/activity_fmod.xml
+++ b/app/src/main/res/layout/activity_fmod.xml
@@ -11,7 +11,8 @@
         android:id="@+id/sample_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
+        android:textSize="18dp"
+        android:text="正常播放"
         android:layout_centerInParent="true"/>
 
 </RelativeLayout>
