--- a/app/src/main/res/layout/activity_fmod.xml
+++ b/app/src/main/res/layout/activity_fmod.xml
@@ -1,18 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     >
 
-    <TextView
-        android:id="@+id/sample_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="18dp"
-        android:text="正常播放"
-        android:layout_centerInParent="true"/>
+    <LinearLayout
+            android:id="@+id/normal_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/item_bg"
+    >
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:textSize="18dp"
+                android:gravity="center"
+                android:text="正常 播放"
+        />
+        <View
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                android:background="@color/black"
+        />
+    </LinearLayout>
 
-</RelativeLayout>
+    <LinearLayout
+            android:id="@+id/luoli_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/item_bg"
+    >
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:textSize="18dp"
+                android:gravity="center"
+                android:text="萝莉 播放"
+        />
+        <View
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                android:background="@color/black"
+        />
+    </LinearLayout>
+
+    <LinearLayout
+            android:id="@+id/dashu_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/item_bg"
+    >
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:textSize="18dp"
+                android:gravity="center"
+                android:text="大叔 播放"
+        />
+        <View
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                android:background="@color/black"
+        />
+    </LinearLayout>
+
+    <LinearLayout
+            android:id="@+id/jingsong_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/item_bg"
+    >
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:textSize="18dp"
+                android:gravity="center"
+                android:text="惊悚 播放 需自行开启改功能，慎用！"
+        />
+        <View
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                android:background="@color/black"
+        />
+    </LinearLayout>
+
+    <LinearLayout
+            android:id="@+id/gaoguai_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/item_bg"
+    >
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:textSize="18dp"
+                android:gravity="center"
+                android:text="搞怪 播放"
+        />
+        <View
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                android:background="@color/black"
+        />
+    </LinearLayout>
+
+    <LinearLayout
+            android:id="@+id/kongling_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/item_bg"
+    >
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:textSize="18dp"
+                android:gravity="center"
+                android:text="空灵 播放"
+        />
+        <View
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                android:background="@color/black"
+        />
+    </LinearLayout>
+
+</LinearLayout>
