--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,27 @@
     </LinearLayout>
 
     <LinearLayout
+            android:id="@+id/c_study_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/item_bg"
+    >
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:textSize="18dp"
+                android:gravity="center"
+                android:text="c 学习"
+        />
+        <View
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                android:background="@color/black"
+        />
+    </LinearLayout>
+
+    <LinearLayout
             android:id="@+id/fmod_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
