--- a/app/src/main/res/layout/activity_player_study.xml
+++ b/app/src/main/res/layout/activity_player_study.xml
@@ -29,4 +29,30 @@
         />
     </LinearLayout>
 
+    <LinearLayout
+            android:id="@+id/player_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/item_bg"
+    >
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:textSize="18dp"
+                android:gravity="center"
+                android:text="点我播放视频"
+        />
+        <View
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                android:background="@color/black"
+        />
+    </LinearLayout>
+
+    <com.caiy.study.view.VideoView
+            android:id="@+id/player_video_view"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+    />
 </LinearLayout>
