--- a/app/src/main/res/layout/activity_player_study.xml
+++ b/app/src/main/res/layout/activity_player_study.xml
@@ -55,4 +55,46 @@
             android:layout_width="match_parent"
             android:layout_height="300dp"
     />
+
+    <LinearLayout
+            android:id="@+id/audio_decode_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/item_bg"
+    >
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:textSize="18dp"
+                android:gravity="center"
+                android:text="点我解码音频文件 TODO"
+        />
+        <View
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                android:background="@color/black"
+        />
+    </LinearLayout>
+
+    <LinearLayout
+            android:id="@+id/audio_player_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/item_bg"
+    >
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:textSize="18dp"
+                android:gravity="center"
+                android:text="点我播放音频"
+        />
+        <View
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                android:background="@color/black"
+        />
+    </LinearLayout>
 </LinearLayout>
